fix spacing a bit

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body, html {
   	border: 3px solid transparent;
   	background-clip: padding-box;
   	padding: 15px;
-  	min-height: 240px;
+  	min-height: 250px;
 }
 
 .align-vertical-center {
